Fixed checkbox alignment.

--- a/src/components/FormComponent/FormComponent.css
+++ b/src/components/FormComponent/FormComponent.css
@@ -1,51 +1,67 @@
 .form-style {
-    font: 14px Arial, Helvetica, sans-serif;
-    max-width: 400px;
-    margin: 10px auto;
-    padding: 16px;
-    background: #F7F7F7;
+  font: 14px Arial, Helvetica, sans-serif;
+  max-width: 400px;
+  margin: 10px auto;
+  padding: 16px;
+  background: #F7F7F7;
 }
 
 .form-input-style {
-    -webkit-transition: all 0.30s ease-in-out;
-    -moz-transition: all 0.30s ease-in-out;
-    -ms-transition: all 0.30s ease-in-out;
-    -o-transition: all 0.30s ease-in-out;
-    outline: none;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    width: 100%;
-    background: #fff;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    padding: 15px;
-    color: #555;
-    font: 95% Arial, Helvetica, sans-serif;
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  width: 100%;
+  background: #fff;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  padding: 15px;
+  color: #555;
+  font: 14px Arial, Helvetica, sans-serif;
+}
+
+.form-checkbox-style {
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  color: #555;
+  font: 14px Arial, Helvetica, sans-serif;
+  margin-bottom: 15px;
+  width: 200px;
+
 }
 
 .form-style input[type="checkbox"]:focus {
-    box-shadow: 0 0 5px #43D1AF;
-    padding: 5px;
-    border: 1px solid #43D1AF;
+  box-shadow: 0 0 5px #43D1AF;
+  padding: 5px;
+  border: 1px solid #43D1AF;
 }
 
 .form-style input[type="submit"],
 .form-style input[type="button"] {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    width: 100%;
-    padding: 15px;
-    background: #43D1AF;
-    border-bottom: 2px solid #30C29E;
-    border-top-style: none;
-    border-right-style: none;
-    border-left-style: none;    
-    color: #fff;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  width: 100%;
+  padding: 15px;
+  background: #43D1AF;
+  border-bottom: 2px solid #30C29E;
+  border-top-style: none;
+  border-right-style: none;
+  border-left-style: none;    
+  color: #fff;
 }
 
 .form-style input[type="submit"]:hover,
 .form-style input[type="button"]:hover{
-    background: #2EBC99;
+  background: #2EBC99;
 }
